[package]
name = "be"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "9.2"
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
env_logger = "0.11.8"
dotenvy = "0.15"
log = "0.4"
futures-util = "0.3"
rand = "0.8"
regex = "1.11.1"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
actix-rt = "2.8"
fake = { version = "4.3.0", features = ["derive", "chrono", "uuid"] }
serial_test = "3.0"
pretty_assertions = "1.4"

[[bin]]
name = "be"
path = "src/main.rs"
